--- a/views/layout/partials/navigation.ejs
+++ b/views/layout/partials/navigation.ejs
@@ -9,15 +9,15 @@
     >
       <span class="sr-only">Toggle navigation</span> &#x2630;
     </button>
-    <a href="./index.html" class="navbar-brand"> <%= siteName %> </a>
+    <a href="/" class="navbar-brand"> <%= siteName %> </a>
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="/index.html" class="nav-link"> Home </a>
+          <a href="/" class="nav-link"> Home </a>
         </li>
         <li class="nav-item dropdown">
           <a
-            href="/speakers.html"
+            href="/speakers"
             class="nav-link dropdown-toggle"
             href="#"
             id="navbarDropdown"
@@ -38,7 +38,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a href="/feedback.html" class="nav-link"> Feedback </a>
+          <a href="/feedback" class="nav-link"> Feedback </a>
         </li>
       </ul>
     </div>
